fix(poll-page): removed border-content gap
with 110% scale in chrome, there was a gap between drop-zone border and it's image

--- a/src/app/pages/poll-page/poll-page.component.scss
+++ b/src/app/pages/poll-page/poll-page.component.scss
@@ -41,26 +41,30 @@
 }
 
 .scene-image {
-	width: 100%;
-	height: calc(100% - 49px);
+	width: calc(100% - 7px);
+	height: calc(100% - 49px - 8px);
 	position: relative;
-	top: calc(-100% + 49px);
-	border-radius: 0px 0px 4px 4px;
+	top: calc(-100% + 49px + 4px);
+  border-radius: 0px 0px 4px 4px;
+  margin: auto;
 	display: block;
 }
 
 .scene-audio-container {
 	height: 344px;
-	border: 4px solid $primary-color-light;
+  // border: 4px solid $primary-color-light;
+  // position: relative;
 	border-radius: 10px;
-	transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s;
 }
 
 .audio-drop-zone {
 	width: 100%;
-	height: 100%;
-	background-color: #d9dbde;
-	border-radius: 4px;
+  height: 100%;
+  box-sizing: border-box;
+  background-color: #d9dbde;
+  border: 5px solid #5b9bd5;
+	border-radius: 10px;
 }
 
 .audio-dropped {
